# weather_fetch

./: .gitignore  README.md  pyproject.toml
tests/: test_main.py
weather_fetch/: __int__.py  main.py
