[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_free_weather"
version = "0.1.1"
description = "A simple Python package to fetch weather data from the free Open-Meteo API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "SHADIK", email = "shadik293@gmail.com" },
]
dependencies = [
    "requests>=2.28,<3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shadikhasan/weather_fetch"
Repository = "https://github.com/shadikhasan/weather_fetch"

[tool.setuptools.packages.find]
where = ["."]
